[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mocitheccat <mocitheccat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
bs4 = "^0.0.2"
aiohttp = "^3.10.3"
pydantic-settings = "^2.4.0"
cloudscraper = "^1.2.71"
selenium = "^4.23.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
appmap = {version = "^2.1.7", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
